cosmetic in cs.po

--- a/plugin/locale/cs/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/cs/LC_MESSAGES/AutoBackup.po
@@ -179,4 +179,4 @@ msgstr "Zálohování EPG cache"
 
 #:
 msgid "Remove autoinstall list"
-msgstr "Smazat autoinstall seznam"
+msgstr "Smazat autoinstall soubory"
