--- a/plugin/locale/fr/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/fr/LC_MESSAGES/AutoBackup.po
@@ -2,109 +2,131 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2-plugin-extensions-autobackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-12-28 14:22+0100\n"
-"PO-Revision-Date: 2014-12-29 14:29+0100\n"
-"Last-Translator: soupalonion <sabrosa@free.fr>\n"
+"POT-Creation-Date: 2016-05-06 14:14+0200\n"
+"PO-Revision-Date: 2016-05-06 14:14+0200\n"
+"Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: french\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 1.7.1\n"
+"X-Generator: Poedit 1.8.7\n"
 
-msgid "AutoBackup Configuration"
-msgstr "Configuration de AutoBackup"
-
+#: ../plugin/plugin.py:123
 msgid "Automatic settings backup"
 msgstr "Sauvegarde automatique des réglages"
 
-msgid "Automatic start time"
-msgstr "Heure de lancement automatique"
-
-msgid "Backup location"
-msgstr "Emplacement de la sauvegarde"
-
-msgid "CF"
-msgstr "CF"
-
-msgid "Cancel"
-msgstr "Annuler"
-
-msgid "Create Autoinstall"
-msgstr "Créer une installation auto"
-
-msgid "Daily automatic backup"
-msgstr "Sauvegarde automatique quotidienne"
-
-msgid "Deselect"
-msgstr "Désélectionner"
-
-msgid "Disable"
-msgstr "Désactiver"
-
-msgid "Disabled"
-msgstr "Désactivé"
-
-msgid "Don't auto-restore this next time"
-msgstr "Pas de restauration auto la prochaine fois"
-
-msgid "Done"
-msgstr "Effectué"
-
-msgid "EPG cache backup"
-msgstr "Sauvegarde du cache EPG"
-
-msgid "Failed"
-msgstr "Echoué"
-
+#: ../plugin/ui.py:18 ../plugin/ui.py:39
 msgid "Harddisk"
 msgstr "Disque dur"
 
-msgid "Last backup date"
-msgstr "Date de la dernière sauvegarde"
+#: ../plugin/ui.py:19
+msgid "USB"
+msgstr "USB"
 
-msgid "Manual"
-msgstr "Manuel"
+#: ../plugin/ui.py:20 ../plugin/ui.py:37
+msgid "CF"
+msgstr "CF"
 
-msgid "No backup present"
-msgstr "Aucune sauvegarde présente"
-
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
-"Aucun média approprié trouvé, insérez une clé USB, carte flash ou disque "
-"dur."
-
-msgid "Nowhere"
-msgstr "Nulle part"
-
-msgid "Ok"
-msgstr "Ok"
-
-msgid "Restore"
-msgstr "Restaurer"
-
-msgid "Run a backup now"
-msgstr "Lancer une sauvegarde maintenant"
-
-msgid "Running"
-msgstr "En cours"
-
+#: ../plugin/ui.py:21
 msgid "SD"
 msgstr "SD"
 
-msgid "Save"
-msgstr "Sauvegarder"
+#: ../plugin/ui.py:34
+msgid "root"
+msgstr ""
 
-msgid "Select"
-msgstr "Sélectionner"
+#: ../plugin/ui.py:93 ../plugin/ui.py:140
+msgid "AutoBackup Configuration"
+msgstr "Configuration de AutoBackup"
 
+#: ../plugin/ui.py:106
+msgid "Nowhere"
+msgstr "Nulle part"
+
+#: ../plugin/ui.py:109
+msgid "Backup location"
+msgstr "Emplacement de la sauvegarde"
+
+#: ../plugin/ui.py:110
+msgid "Daily automatic backup"
+msgstr "Sauvegarde automatique quotidienne"
+
+#: ../plugin/ui.py:111
+msgid "Automatic start time"
+msgstr "Heure de lancement automatique"
+
+#: ../plugin/ui.py:112
+msgid "Create Autoinstall"
+msgstr "Créer une installation auto"
+
+#: ../plugin/ui.py:113
+msgid "EPG cache backup"
+msgstr "Sauvegarde du cache EPG"
+
+#: ../plugin/ui.py:116 ../plugin/ui.py:328
+msgid "Cancel"
+msgstr "Annuler"
+
+#: ../plugin/ui.py:117
+msgid "Ok"
+msgstr "Ok"
+
+#: ../plugin/ui.py:118
+msgid "Manual"
+msgstr "Manuel"
+
+#: ../plugin/ui.py:158
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Aucun média approprié trouvé, insérez une clé USB, carte flash ou disque dur."
+
+#: ../plugin/ui.py:164
+msgid "No backup present"
+msgstr "Aucune sauvegarde présente"
+
+#: ../plugin/ui.py:179
+msgid "Last backup date"
+msgstr "Date de la dernière sauvegarde"
+
+#: ../plugin/ui.py:182
+msgid "Disabled"
+msgstr "Désactivé"
+
+#: ../plugin/ui.py:184
+msgid "Disable"
+msgstr "Désactiver"
+
+#: ../plugin/ui.py:215
 msgid "Select files to backup"
 msgstr "Sélectionner les fichiers à sauvegarder"
 
-msgid "Select files/folders to backup"
-msgstr "Sélectionner les fichiers/dossiers à sauvegarder"
+#: ../plugin/ui.py:216
+msgid "Run a backup now"
+msgstr "Lancer une sauvegarde maintenant"
 
+#: ../plugin/ui.py:217
+msgid "Backup EPG cache"
+msgstr ""
+
+#: ../plugin/ui.py:220
+msgid "Don't auto-restore this next time"
+msgstr "Pas de restauration auto la prochaine fois"
+
+#: ../plugin/ui.py:222
+msgid "Remove autoinstall list"
+msgstr ""
+
+#: ../plugin/ui.py:223
+msgid "Restore"
+msgstr "Restaurer"
+
+#: ../plugin/ui.py:247 ../plugin/ui.py:270
+msgid "Running"
+msgstr "En cours"
+
+#: ../plugin/ui.py:260
+#, python-format
 msgid ""
 "This will restore your backup on %s.\n"
 "Do you really want to restore those settings and restart?"
@@ -112,5 +134,26 @@ msgstr ""
 "Ceci va restaurer votre sauvegarde sur %s.\n"
 "Voulez-vous vraiment restaurer ces réglages et redémarrer?"
 
-msgid "USB"
-msgstr "USB"
+#: ../plugin/ui.py:298
+msgid "Failed"
+msgstr "Echoué"
+
+#: ../plugin/ui.py:300
+msgid "Done"
+msgstr "Effectué"
+
+#: ../plugin/ui.py:329
+msgid "Save"
+msgstr "Sauvegarder"
+
+#: ../plugin/ui.py:359
+msgid "Select files/folders to backup"
+msgstr "Sélectionner les fichiers/dossiers à sauvegarder"
+
+#: ../plugin/ui.py:365
+msgid "Deselect"
+msgstr "Désélectionner"
+
+#: ../plugin/ui.py:367
+msgid "Select"
+msgstr "Sélectionner"
