--- a/plugin/locale/uk/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/uk/LC_MESSAGES/AutoBackup.po
@@ -1,11 +1,10 @@
 msgid ""
 msgstr ""
-
 "Project-Id-Version: AutoBackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-15 07:58+0100\n"
+"POT-Creation-Date: 2016-05-06 14:14+0200\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Irkoff <irkoff@gmail.com>\n"
+"Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: http://gisclub.tv <irkoff@gmail.com>\n"
 "Language: uk_UA\n"
 "MIME-Version: 1.0\n"
@@ -13,95 +12,122 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Generator: Poedit 1.6.4\n"
+"X-Generator: Poedit 1.8.7\n"
 
-msgid "AutoBackup Configuration"
-msgstr "Налаштування AutoBackup"
-
+#: ../plugin/plugin.py:123
 msgid "Automatic settings backup"
 msgstr "Налаштування автоматичного резервного копіювання"
 
-msgid "Automatic start time"
-msgstr "Час автоматичного резервного копіювання"
-
-msgid "Backup location"
-msgstr "Місце резервування"
-
-msgid "CF"
-msgstr "CF"
-
-msgid "Cancel"
-msgstr "Відмінити"
-
-msgid "Create Autoinstall"
-msgstr "Створення AutoInstall"
-
-msgid "Daily automatic backup"
-msgstr "Щоденно автоматичне резервне копіювання"
-
-msgid "Deselect"
-msgstr "Скасувати"
-
-msgid "Disable"
-msgstr "Заборонити"
-
-msgid "Disabled"
-msgstr "Заборонити"
-
-msgid "Don't auto-restore this next time"
-msgstr "Наступного разу автоматично не обновлювати"
-
-msgid "Done"
-msgstr "Закінчено"
-
-msgid "Failed"
-msgstr "Не вдалося"
-
+#: ../plugin/ui.py:18 ../plugin/ui.py:39
 msgid "Harddisk"
 msgstr "Жорсткий диск"
 
-msgid "Last backup date"
-msgstr "Дата останнього резервного копіювання"
-
-msgid "Manual"
-msgstr "Ручна"
-
-msgid "No backup present"
-msgstr "Відсутній backup"
-
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
+#: ../plugin/ui.py:19
+msgid "USB"
 msgstr ""
 
-msgid "Nowhere"
-msgstr "Ніколи"
+#: ../plugin/ui.py:20 ../plugin/ui.py:37
+msgid "CF"
+msgstr "CF"
 
-msgid "Ok"
-msgstr "Ok"
-
-msgid "Restore"
-msgstr "Оновити"
-
-msgid "Run a backup now"
-msgstr "Виконати резервне копіювання зараз"
-
-msgid "Running"
-msgstr "Запуск"
-
+#: ../plugin/ui.py:21
 msgid "SD"
 msgstr "SD"
 
-msgid "Save"
-msgstr "Зберегти"
+#: ../plugin/ui.py:34
+msgid "root"
+msgstr ""
 
-msgid "Select"
-msgstr "Вибрати"
+#: ../plugin/ui.py:93 ../plugin/ui.py:140
+msgid "AutoBackup Configuration"
+msgstr "Налаштування AutoBackup"
 
+#: ../plugin/ui.py:106
+msgid "Nowhere"
+msgstr "Ніколи"
+
+#: ../plugin/ui.py:109
+msgid "Backup location"
+msgstr "Місце резервування"
+
+#: ../plugin/ui.py:110
+msgid "Daily automatic backup"
+msgstr "Щоденно автоматичне резервне копіювання"
+
+#: ../plugin/ui.py:111
+msgid "Automatic start time"
+msgstr "Час автоматичного резервного копіювання"
+
+#: ../plugin/ui.py:112
+msgid "Create Autoinstall"
+msgstr "Створення AutoInstall"
+
+#: ../plugin/ui.py:113
+msgid "EPG cache backup"
+msgstr ""
+
+#: ../plugin/ui.py:116 ../plugin/ui.py:328
+msgid "Cancel"
+msgstr "Відмінити"
+
+#: ../plugin/ui.py:117
+msgid "Ok"
+msgstr "Ok"
+
+#: ../plugin/ui.py:118
+msgid "Manual"
+msgstr "Ручна"
+
+#: ../plugin/ui.py:158
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr ""
+
+#: ../plugin/ui.py:164
+msgid "No backup present"
+msgstr "Відсутній backup"
+
+#: ../plugin/ui.py:179
+msgid "Last backup date"
+msgstr "Дата останнього резервного копіювання"
+
+#: ../plugin/ui.py:182
+msgid "Disabled"
+msgstr "Заборонити"
+
+#: ../plugin/ui.py:184
+msgid "Disable"
+msgstr "Заборонити"
+
+#: ../plugin/ui.py:215
 msgid "Select files to backup"
 msgstr "Вибір файлів для резервн. копіювання."
 
-msgid "Select files/folders to backup"
-msgstr "Виберіть файли/папки для резервн. копіювання"
+#: ../plugin/ui.py:216
+msgid "Run a backup now"
+msgstr "Виконати резервне копіювання зараз"
 
+#: ../plugin/ui.py:217
+msgid "Backup EPG cache"
+msgstr ""
+
+#: ../plugin/ui.py:220
+msgid "Don't auto-restore this next time"
+msgstr "Наступного разу автоматично не обновлювати"
+
+#: ../plugin/ui.py:222
+msgid "Remove autoinstall list"
+msgstr ""
+
+#: ../plugin/ui.py:223
+msgid "Restore"
+msgstr "Оновити"
+
+#: ../plugin/ui.py:247 ../plugin/ui.py:270
+msgid "Running"
+msgstr "Запуск"
+
+#: ../plugin/ui.py:260
+#, python-format
 msgid ""
 "This will restore your backup on %s.\n"
 "Do you really want to restore those settings and restart?"
@@ -109,8 +135,26 @@ msgstr ""
 "Ви бажаєте відновити резервну копію з %s.\n"
 "Ви дійсно бажаєте, відновити ці настройки і перезавантажити?"
 
-msgid "Backup EPG cache"
-msgstr ""
+#: ../plugin/ui.py:298
+msgid "Failed"
+msgstr "Не вдалося"
 
-msgid "EPG cache backup"
-msgstr ""
+#: ../plugin/ui.py:300
+msgid "Done"
+msgstr "Закінчено"
+
+#: ../plugin/ui.py:329
+msgid "Save"
+msgstr "Зберегти"
+
+#: ../plugin/ui.py:359
+msgid "Select files/folders to backup"
+msgstr "Виберіть файли/папки для резервн. копіювання"
+
+#: ../plugin/ui.py:365
+msgid "Deselect"
+msgstr "Скасувати"
+
+#: ../plugin/ui.py:367
+msgid "Select"
+msgstr "Вибрати"
