--- a/plugin/locale/de/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/de/LC_MESSAGES/AutoBackup.po
@@ -196,3 +196,6 @@ msgstr "Markierung aufheben"
 #: ../plugin/ui.py:367
 msgid "Select"
 msgstr "Auswählen"
+
+msgid "Save previous backup"
+msgstr ""
