--- a/plugin/locale/fr/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/fr/LC_MESSAGES/AutoBackup.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2-plugin-extensions-autobackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-06 14:14+0200\n"
-"PO-Revision-Date: 2017-09-12 14:36+0200\n"
+"POT-Creation-Date: 2018-05-11 20:56+0200\n"
+"PO-Revision-Date: 2018-05-11 21:03+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -11,121 +11,154 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Poedit 2.0.7\n"
 
-#: ../plugin/plugin.py:123
-msgid "Automatic settings backup"
-msgstr "Sauvegarde automatique des réglages"
-
-#: ../plugin/ui.py:18 ../plugin/ui.py:39
-msgid "Harddisk"
-msgstr "Disque dur"
-
-#: ../plugin/ui.py:19
-msgid "USB"
-msgstr "USB"
-
-#: ../plugin/ui.py:20 ../plugin/ui.py:37
-msgid "CF"
-msgstr "CF"
-
-#: ../plugin/ui.py:21
-msgid "SD"
-msgstr "SD"
-
-#: ../plugin/ui.py:34
-msgid "root"
-msgstr "racine"
-
-#: ../plugin/ui.py:93 ../plugin/ui.py:140
+#: ../plugin/ui.py:96 ../plugin/ui.py:144
 msgid "AutoBackup Configuration"
 msgstr "Configuration de AutoBackup"
 
-#: ../plugin/ui.py:106
-msgid "Nowhere"
-msgstr "Nulle part"
+#: ../plugin/plugin.py:125
+msgid "Automatic settings backup"
+msgstr "Sauvegarde automatique des réglages"
 
-#: ../plugin/ui.py:109
-msgid "Backup location"
-msgstr "Emplacement de la sauvegarde"
-
-#: ../plugin/ui.py:110
-msgid "Daily automatic backup"
-msgstr "Sauvegarde automatique quotidienne"
-
-#: ../plugin/ui.py:111
+#: ../plugin/ui.py:114
 msgid "Automatic start time"
 msgstr "Heure de lancement automatique"
 
-#: ../plugin/ui.py:112
-msgid "Create Autoinstall"
-msgstr "Créer une installation auto"
-
-#: ../plugin/ui.py:113
-msgid "EPG cache backup"
-msgstr "Sauvegarde du cache EPG"
-
-#: ../plugin/ui.py:116 ../plugin/ui.py:328
-msgid "Cancel"
-msgstr "Annuler"
-
-#: ../plugin/ui.py:117
-msgid "Ok"
-msgstr "Ok"
-
-#: ../plugin/ui.py:118
-msgid "Manual"
-msgstr "Manuel"
-
-#: ../plugin/ui.py:158
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr "Aucun média approprié trouvé, insérez une clé USB, carte flash ou disque dur."
-
-#: ../plugin/ui.py:164
-msgid "No backup present"
-msgstr "Aucune sauvegarde présente"
-
-#: ../plugin/ui.py:179
-msgid "Last backup date"
-msgstr "Date de la dernière sauvegarde"
-
-#: ../plugin/ui.py:182
-msgid "Disabled"
-msgstr "Désactivé"
-
-#: ../plugin/ui.py:184
-msgid "Disable"
-msgstr "Désactiver"
-
-#: ../plugin/ui.py:215
-msgid "Select files to backup"
-msgstr "Sélectionner les fichiers à sauvegarder"
-
-#: ../plugin/ui.py:216
-msgid "Run a backup now"
-msgstr "Lancer une sauvegarde maintenant"
-
-#: ../plugin/ui.py:217
+#: ../plugin/ui.py:221
 msgid "Backup EPG cache"
 msgstr "Sauvegarder le cache EPG"
 
-#: ../plugin/ui.py:220
+#: ../plugin/ui.py:112
+msgid "Backup location"
+msgstr "Emplacement de la sauvegarde"
+
+#: ../plugin/ui.py:22 ../plugin/ui.py:39
+msgid "CF"
+msgstr "CF"
+
+#: ../plugin/ui.py:120 ../plugin/ui.py:355
+msgid "Cancel"
+msgstr "Annuler"
+
+#: ../plugin/ui.py:115
+msgid "Create Autoinstall"
+msgstr "Créer une installation automatique"
+
+#: ../plugin/ui.py:113
+msgid "Daily automatic backup"
+msgstr "Sauvegarde automatique quotidienne"
+
+#: ../plugin/ui.py:392
+msgid "Deselect"
+msgstr "Désélectionner"
+
+#: ../plugin/ui.py:188
+msgid "Disable"
+msgstr "Désactiver"
+
+#: ../plugin/ui.py:186
+msgid "Disabled"
+msgstr "Désactivé"
+
+#: ../plugin/ui.py:224
 msgid "Don't auto-restore this next time"
 msgstr "Pas de restauration auto la prochaine fois"
 
-#: ../plugin/ui.py:222
+#: ../plugin/ui.py:328
+msgid "Done"
+msgstr "Effectué"
+
+#: ../plugin/ui.py:116
+msgid "EPG cache backup"
+msgstr "Sauvegarde du cache EPG"
+
+#: ../plugin/ui.py:326
+msgid "Failed"
+msgstr "Echoué"
+
+#: ../plugin/ui.py:20 ../plugin/ui.py:41
+msgid "Harddisk"
+msgstr "Disque dur"
+
+#: ../plugin/ui.py:183
+msgid "Last backup date"
+msgstr "Date de la dernière sauvegarde"
+
+#: ../plugin/ui.py:122
+msgid "Manual"
+msgstr "Manuel"
+
+#: ../plugin/ui.py:168
+msgid "No backup present"
+msgstr "Aucune sauvegarde présente"
+
+#: ../plugin/ui.py:162
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Aucun média approprié trouvé, insérez une clé USB, carte flash ou disque dur."
+
+#: ../plugin/ui.py:109
+msgid "Nowhere"
+msgstr "Nulle part"
+
+#: ../plugin/ui.py:121
+msgid "Ok"
+msgstr "Ok"
+
+#: ../plugin/ui.py:227
 msgid "Remove autoinstall list"
 msgstr "Enlever la liste d’auto-installation"
 
-#: ../plugin/ui.py:223
+#: ../plugin/ui.py:228
 msgid "Restore"
 msgstr "Restaurer"
 
-#: ../plugin/ui.py:247 ../plugin/ui.py:270
-msgid "Running"
-msgstr "En cours"
+#: ../plugin/ui.py:220
+msgid "Run a backup now"
+msgstr "Lancer une sauvegarde maintenant"
 
-#: ../plugin/ui.py:260
+#: ../plugin/ui.py:226
+msgid "Run autoinstall"
+msgstr "Exécuter l’auto-installation"
+
+#: ../plugin/ui.py:252 ../plugin/ui.py:275 ../plugin/ui.py:298
+msgid "Running..."
+msgstr "En cours d’exécution…"
+
+#: ../plugin/ui.py:23
+msgid "SD"
+msgstr "SD"
+
+#: ../plugin/ui.py:356
+msgid "Save"
+msgstr "Sauvegarder"
+
+#: ../plugin/ui.py:117
+msgid "Save previous backup"
+msgstr "Enregistrer la sauvegarde précédente"
+
+#: ../plugin/ui.py:394
+msgid "Select"
+msgstr "Sélectionner"
+
+#: ../plugin/ui.py:219
+msgid "Select files to backup"
+msgstr "Sélectionner les fichiers à sauvegarder"
+
+#: ../plugin/ui.py:386
+msgid "Select files/folders to backup"
+msgstr "Sélectionner les fichiers/dossiers à sauvegarder"
+
+#: ../plugin/ui.py:288
+#, python-format
+msgid ""
+"This will reinstall all plugins from your backup on %s.\n"
+"Do you really want to reinstall?"
+msgstr ""
+"Ceci va réinstaller tous les plugins/extensions de votre sauvegarde sur %s.\n"
+"Voulez-vous vraiment les réinstaller?"
+
+#: ../plugin/ui.py:265
 #, python-format
 msgid ""
 "This will restore your backup on %s.\n"
@@ -134,29 +167,10 @@ msgstr ""
 "Ceci va restaurer votre sauvegarde sur %s.\n"
 "Voulez-vous vraiment restaurer ces réglages et redémarrer?"
 
-#: ../plugin/ui.py:298
-msgid "Failed"
-msgstr "Echoué"
+#: ../plugin/ui.py:21
+msgid "USB"
+msgstr "USB"
 
-#: ../plugin/ui.py:300
-msgid "Done"
-msgstr "Effectué"
-
-#: ../plugin/ui.py:329
-msgid "Save"
-msgstr "Sauvegarder"
-
-#: ../plugin/ui.py:359
-msgid "Select files/folders to backup"
-msgstr "Sélectionner les fichiers/dossiers à sauvegarder"
-
-#: ../plugin/ui.py:365
-msgid "Deselect"
-msgstr "Désélectionner"
-
-#: ../plugin/ui.py:367
-msgid "Select"
-msgstr "Sélectionner"
-
-msgid "Save previous backup"
-msgstr "Enregistrer la sauvegarde précédente"
+#: ../plugin/ui.py:36
+msgid "root"
+msgstr "racine"
