--- a/plugin/locale/cs/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/cs/LC_MESSAGES/AutoBackup.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ims\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-09 10:41+0100\n"
+"POT-Creation-Date: 2018-06-07 17:04+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims21@users.sourceforge.net>\n"
@@ -11,158 +11,134 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Poedit 1.8.7.1\n"
 
 #
-#: plugin.py:125
+msgid "AutoBackup Configuration"
+msgstr "Nastavení AutoBackup"
+
+#
 msgid "Automatic settings backup"
 msgstr "Nastavení automatického zálohování"
 
 #
-#: ui.py:20 ui.py:41
-msgid "Harddisk"
-msgstr "Pevný disk"
+msgid "Automatic start time"
+msgstr "Čas automatické zálohy"
 
-#: ui.py:21
-msgid "USB"
-msgstr "USB"
-
-#: ui.py:22 ui.py:39
-msgid "CF"
-msgstr "CF"
-
-#: ui.py:23
-msgid "SD"
-msgstr "SD"
-
-#: ui.py:36
-msgid "root"
-msgstr "root"
-
-#
-#: ui.py:96 ui.py:144
-msgid "AutoBackup Configuration"
-msgstr "Nastavení AutoBackup"
-
-#: ui.py:109
-msgid "Nowhere"
-msgstr "Nikde"
+msgid "Backup EPG cache"
+msgstr "Uložit EPG cache"
 
 # Autobackup
 #
 #
-#: ui.py:112
 msgid "Backup location"
 msgstr "Umístění zálohy"
 
+msgid "CF"
+msgstr "CF"
+
 #
-#: ui.py:113
+msgid "Cancel"
+msgstr "Zavřít"
+
+#
+msgid "Create Autoinstall"
+msgstr "Založit Autoinstall"
+
+#
 msgid "Daily automatic backup"
 msgstr "Denně automaticky zálohovat"
 
 #
-#: ui.py:114
-msgid "Automatic start time"
-msgstr "Čas automatické zálohy"
+msgid "Deselect"
+msgstr "Odebrat"
 
 #
-#: ui.py:115
-msgid "Create Autoinstall"
-msgstr "Založit Autoinstall"
+msgid "Disable"
+msgstr "Zakázat"
 
-#: ui.py:116
+#
+msgid "Disabled"
+msgstr "zakázán"
+
+msgid "Don't auto-restore this next time"
+msgstr "Následující čas automaticky neobnovovat"
+
+#
+msgid "Done"
+msgstr "Dokončeno"
+
 msgid "EPG cache backup"
 msgstr "Zálohování EPG cache"
 
-#: ui.py:117
-msgid "Save previous backup"
-msgstr "Uložit předchozí zálohu"
+#
+msgid "Failed"
+msgstr "Selhalo"
 
 #
-#: ui.py:120 ui.py:355
-msgid "Cancel"
-msgstr "Zavřít"
-
-#: ui.py:121
-msgid "Ok"
-msgstr "Ok"
+msgid "Harddisk"
+msgstr "Pevný disk"
 
 #
-#: ui.py:122
-msgid "Manual"
-msgstr "Ručně"
-
-#: ui.py:162
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
-"Žádné vhodné médium nebylo nalezeno. Vložte USB, flash kartu nebo pevný disk."
-
-#
-#: ui.py:168
-msgid "No backup present"
-msgstr "Žádná záloha"
-
-#
-#: ui.py:183
 msgid "Last backup date"
 msgstr "Datum poslední zálohy"
 
 #
-#: ui.py:186
-msgid "Disabled"
-msgstr "zakázán"
+msgid "Manual"
+msgstr "Ručně"
 
 #
-#: ui.py:188
-msgid "Disable"
-msgstr "Zakázat"
+msgid "No backup present"
+msgstr "Žádná záloha"
 
-#: ui.py:219
-msgid "Select files to backup"
-msgstr "Výběr souborů pro zálohování."
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Žádné vhodné médium nebylo nalezeno. Vložte USB, flash kartu nebo pevný disk."
 
-#: ui.py:220
-msgid "Run a backup now"
-msgstr "Spustit zálohu nyní"
+msgid "Nowhere"
+msgstr "Nikde"
 
-#: ui.py:221
-msgid "Backup EPG cache"
-msgstr "Uložit EPG cache"
+msgid "Ok"
+msgstr "Ok"
 
-#: ui.py:224
-msgid "Don't auto-restore this next time"
-msgstr "Následující čas automaticky neobnovovat"
-
-#: ui.py:226
-msgid "Run autoinstall"
-msgstr "Spustit autoinstall"
-
-#: ui.py:227
 msgid "Remove autoinstall list"
 msgstr "Smazat autoinstall soubory"
 
 #
-#: ui.py:228
 msgid "Restore"
 msgstr "Obnovit"
 
+msgid "Run a backup now"
+msgstr "Spustit zálohu nyní"
+
+msgid "Run autoinstall"
+msgstr "Spustit autoinstall"
+
 #
-#: ui.py:252 ui.py:275 ui.py:298
 msgid "Running..."
 msgstr "Probíhá..."
 
-#: ui.py:265
-#, python-format
-msgid ""
-"This will restore your backup on %s.\n"
-"Do you really want to restore those settings and restart?"
-msgstr ""
-"Tímto obnovíte Vaši zálohu z %s.\n"
-"Chcete opravdu obnovit tato nastavení a restartovat?"
+msgid "SD"
+msgstr "SD"
 
-#: ui.py:288
+#
+msgid "Save"
+msgstr "Uložit"
+
+msgid "Save previous backup"
+msgstr "Uložit předchozí zálohu"
+
+#
+msgid "Select"
+msgstr "Zvolit"
+
+msgid "Select files to backup"
+msgstr "Výběr souborů pro zálohování."
+
+#
+msgid "Select files/folders to backup"
+msgstr "Vyberte soubory/složky pro zálohování"
+
 #, python-format
 msgid ""
 "This will reinstall all plugins from your backup on %s.\n"
@@ -171,32 +147,16 @@ msgstr ""
 "Přeinstaluje všechny pluginy z Vaší zálohy v %s.\n"
 "Chcete opravdu přeinstalovat?"
 
-#
-#: ui.py:326
-msgid "Failed"
-msgstr "Selhalo"
+#, python-format
+msgid ""
+"This will restore your backup on %s.\n"
+"Do you really want to restore those settings and restart?"
+msgstr ""
+"Tímto obnovíte Vaši zálohu z %s.\n"
+"Chcete opravdu obnovit tato nastavení a restartovat?"
 
-#
-#: ui.py:328
-msgid "Done"
-msgstr "Dokončeno"
+msgid "USB"
+msgstr "USB"
 
-#
-#: ui.py:356
-msgid "Save"
-msgstr "Uložit"
-
-#
-#: ui.py:386
-msgid "Select files/folders to backup"
-msgstr "Vyberte soubory/složky pro zálohování"
-
-#
-#: ui.py:392
-msgid "Deselect"
-msgstr "Odebrat"
-
-#
-#: ui.py:394
-msgid "Select"
-msgstr "Zvolit"
+msgid "root"
+msgstr "root"
