--- a/plugin/locale/el/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/el/LC_MESSAGES/AutoBackup.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: AutoBackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-06 14:13+0200\n"
+"POT-Creation-Date: 2018-06-07 17:04+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: \n"
@@ -12,153 +12,128 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.8.7\n"
 
-#: ../plugin/plugin.py:123
-msgid "Automatic settings backup"
-msgstr "Αυτόματη δημιουργία αντιγράφων ασφαλείας των ρυθμίσεων"
-
-#: ../plugin/ui.py:18 ../plugin/ui.py:39
-msgid "Harddisk"
-msgstr "Σκληρός Δίσκος"
-
-#: ../plugin/ui.py:19
-msgid "USB"
-msgstr "USB"
-
-#: ../plugin/ui.py:20 ../plugin/ui.py:37
-msgid "CF"
-msgstr "CF"
-
-#: ../plugin/ui.py:21
-msgid "SD"
-msgstr "SD"
-
-#: ../plugin/ui.py:34
-msgid "root"
-msgstr ""
-
-#: ../plugin/ui.py:93 ../plugin/ui.py:140
 msgid "AutoBackup Configuration"
 msgstr "Αυτόματη ρύθμιση αντιγράφων ασφαλείας"
 
-#: ../plugin/ui.py:106
-msgid "Nowhere"
-msgstr "Πουθενά"
+msgid "Automatic settings backup"
+msgstr "Αυτόματη δημιουργία αντιγράφων ασφαλείας των ρυθμίσεων"
 
-#: ../plugin/ui.py:109
-msgid "Backup location"
-msgstr "Θέση αντιγράφων ασφαλείας"
-
-#: ../plugin/ui.py:110
-msgid "Daily automatic backup"
-msgstr "Καθημερινή αυτόματη δημιουργία αντιγράφων ασφαλείας"
-
-#: ../plugin/ui.py:111
 msgid "Automatic start time"
 msgstr "Αυτόματη ώρα έναρξης"
 
-#: ../plugin/ui.py:112
-msgid "Create Autoinstall"
-msgstr "Δημιουργία αυτόματης εγκατάστασης"
-
-#: ../plugin/ui.py:113
-msgid "EPG cache backup"
-msgstr ""
-
-#: ../plugin/ui.py:116 ../plugin/ui.py:328
-msgid "Cancel"
-msgstr "Ακύρωση"
-
-#: ../plugin/ui.py:117
-msgid "Ok"
-msgstr "ΟΚ"
-
-#: ../plugin/ui.py:118
-msgid "Manual"
-msgstr "Χειροκίνητα"
-
-#: ../plugin/ui.py:158
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
-"Δεν βρέθηκαν κατάλληλα μέσα, τοποθετήστε USB stick, flash κάρτα ή σκληρό "
-"δίσκο."
-
-#: ../plugin/ui.py:164
-msgid "No backup present"
-msgstr "Δεν υπάρχει αντιγράφο ασφαλείας"
-
-#: ../plugin/ui.py:179
-msgid "Last backup date"
-msgstr "Τελευταία ημερομηνία δημιουργίας αντιγράφου ασφαλείας"
-
-#: ../plugin/ui.py:182
-msgid "Disabled"
-msgstr "Απενεργοποιήθηκε"
-
-#: ../plugin/ui.py:184
-msgid "Disable"
-msgstr "Απενεργοποίηση"
-
-#: ../plugin/ui.py:215
-msgid "Select files to backup"
-msgstr "Επιλογή αρχείων για δημιουργία αντιγράφου ασφαλείας"
-
-#: ../plugin/ui.py:216
-msgid "Run a backup now"
-msgstr "Δημιουργία αντιγράφου ασφαλείας τώρα"
-
-#: ../plugin/ui.py:217
 msgid "Backup EPG cache"
 msgstr ""
 
-#: ../plugin/ui.py:220
+msgid "Backup location"
+msgstr "Θέση αντιγράφων ασφαλείας"
+
+msgid "CF"
+msgstr "CF"
+
+msgid "Cancel"
+msgstr "Ακύρωση"
+
+msgid "Create Autoinstall"
+msgstr "Δημιουργία αυτόματης εγκατάστασης"
+
+msgid "Daily automatic backup"
+msgstr "Καθημερινή αυτόματη δημιουργία αντιγράφων ασφαλείας"
+
+msgid "Deselect"
+msgstr "Αποεπιλογή"
+
+msgid "Disable"
+msgstr "Απενεργοποίηση"
+
+msgid "Disabled"
+msgstr "Απενεργοποιήθηκε"
+
 msgid "Don't auto-restore this next time"
 msgstr "Μην γίνει αυτόματη επαναφορά για αυτό την επόμενη φορά"
 
-#: ../plugin/ui.py:222
+msgid "Done"
+msgstr "Ολοκληρώθηκε"
+
+msgid "EPG cache backup"
+msgstr ""
+
+msgid "Failed"
+msgstr "Αποτυχία"
+
+msgid "Harddisk"
+msgstr "Σκληρός Δίσκος"
+
+msgid "Last backup date"
+msgstr "Τελευταία ημερομηνία δημιουργίας αντιγράφου ασφαλείας"
+
+msgid "Manual"
+msgstr "Χειροκίνητα"
+
+msgid "No backup present"
+msgstr "Δεν υπάρχει αντιγράφο ασφαλείας"
+
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Δεν βρέθηκαν κατάλληλα μέσα, τοποθετήστε USB stick, flash κάρτα ή σκληρό δίσκο."
+
+msgid "Nowhere"
+msgstr "Πουθενά"
+
+msgid "Ok"
+msgstr "ΟΚ"
+
 msgid "Remove autoinstall list"
 msgstr ""
 
-#: ../plugin/ui.py:223
 msgid "Restore"
 msgstr "Επαναφορά"
 
-#: ../plugin/ui.py:247 ../plugin/ui.py:270
-msgid "Running"
+msgid "Run a backup now"
+msgstr "Δημιουργία αντιγράφου ασφαλείας τώρα"
+
+#, fuzzy
+msgid "Run autoinstall"
+msgstr "Δημιουργία αυτόματης εγκατάστασης"
+
+#, fuzzy
+msgid "Running..."
 msgstr "Σε λειτουργία"
 
-#: ../plugin/ui.py:260
+msgid "SD"
+msgstr "SD"
+
+msgid "Save"
+msgstr "Αποθήκευση"
+
+msgid "Save previous backup"
+msgstr ""
+
+msgid "Select"
+msgstr "Επιλογή"
+
+msgid "Select files to backup"
+msgstr "Επιλογή αρχείων για δημιουργία αντιγράφου ασφαλείας"
+
+msgid "Select files/folders to backup"
+msgstr "Επιλογή αρχείων/φακέλων για το αντίγραφο ασφαλείας"
+
+#, fuzzy, python-format
+msgid ""
+"This will reinstall all plugins from your backup on %s.\n"
+"Do you really want to reinstall?"
+msgstr ""
+"Αυτό θα επαναφέρει το αντίγραφο ασφαλείας σας στο %s.\n"
+"Είστε σίγουροι ότι θέλετε να γίνει επαναφορά αυτών των ρυθμίσεων και επανεκκίνηση;"
+
 #, python-format
 msgid ""
 "This will restore your backup on %s.\n"
 "Do you really want to restore those settings and restart?"
 msgstr ""
 "Αυτό θα επαναφέρει το αντίγραφο ασφαλείας σας στο %s.\n"
-"Είστε σίγουροι ότι θέλετε να γίνει επαναφορά αυτών των ρυθμίσεων και "
-"επανεκκίνηση;"
+"Είστε σίγουροι ότι θέλετε να γίνει επαναφορά αυτών των ρυθμίσεων και επανεκκίνηση;"
 
-#: ../plugin/ui.py:298
-msgid "Failed"
-msgstr "Αποτυχία"
+msgid "USB"
+msgstr "USB"
 
-#: ../plugin/ui.py:300
-msgid "Done"
-msgstr "Ολοκληρώθηκε"
-
-#: ../plugin/ui.py:329
-msgid "Save"
-msgstr "Αποθήκευση"
-
-#: ../plugin/ui.py:359
-msgid "Select files/folders to backup"
-msgstr "Επιλογή αρχείων/φακέλων για το αντίγραφο ασφαλείας"
-
-#: ../plugin/ui.py:365
-msgid "Deselect"
-msgstr "Αποεπιλογή"
-
-#: ../plugin/ui.py:367
-msgid "Select"
-msgstr "Επιλογή"
-
-msgid "Save previous backup"
+msgid "root"
 msgstr ""
