--- a/plugin/locale/fa/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/fa/LC_MESSAGES/AutoBackup.po
@@ -2,156 +2,160 @@ msgid ""
 msgstr ""
 "Project-Id-Version: auto backup Persian Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-06 14:13+0200\n"
+"POT-Creation-Date: 2018-06-07 17:04+0200\n"
 "PO-Revision-Date: 2016-05-06 14:13+0200\n"
 "Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
 "Language: fa_IR\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.8.7\n"
 
 #
-#: ../plugin/plugin.py:123
-msgid "Automatic settings backup"
-msgstr "تهیه یک نسخه پشتیبان از لیست تنظیمات"
-
-#
-#: ../plugin/ui.py:18 ../plugin/ui.py:39
-msgid "Harddisk"
-msgstr "هارد دیسک"
-
-#
-#: ../plugin/ui.py:19
-msgid "USB"
-msgstr "فلش مموری"
-
-#
-#: ../plugin/ui.py:20 ../plugin/ui.py:37
-msgid "CF"
-msgstr "کارت حافظه از نوع از نوع سی اف"
-
-#
-#: ../plugin/ui.py:21
-msgid "SD"
-msgstr "کارت حافظه از نوع اس دی"
-
-#: ../plugin/ui.py:34
-msgid "root"
-msgstr ""
-
-#
-#: ../plugin/ui.py:93 ../plugin/ui.py:140
 msgid "AutoBackup Configuration"
 msgstr "پیکربندی خودکار به منظور تهیه نسخه پشتیبان"
 
 #
-#: ../plugin/ui.py:106
-msgid "Nowhere"
-msgstr "هیچ کجا "
+msgid "Automatic settings backup"
+msgstr "تهیه یک نسخه پشتیبان از لیست تنظیمات"
 
 #
-#: ../plugin/ui.py:109
-msgid "Backup location"
-msgstr "محل ذخیره سازی نسخه پشتیبان"
-
-#
-#: ../plugin/ui.py:110
-msgid "Daily automatic backup"
-msgstr "تهیه نسخه پشتیبان بصورت روزانه"
-
-#
-#: ../plugin/ui.py:111
 msgid "Automatic start time"
 msgstr "تنظیم زمان برای شروع خودکار"
 
-#
-#: ../plugin/ui.py:112
-msgid "Create Autoinstall"
-msgstr "ایجاد یک نصب خودکار"
-
-#: ../plugin/ui.py:113
-msgid "EPG cache backup"
-msgstr ""
-
-#
-#: ../plugin/ui.py:116 ../plugin/ui.py:328
-msgid "Cancel"
-msgstr "لغو کردن"
-
-#
-#: ../plugin/ui.py:117
-msgid "Ok"
-msgstr "کار تایید می شود "
-
-#
-#: ../plugin/ui.py:118
-msgid "Manual"
-msgstr "کار بصورت دستی "
-
-#
-#: ../plugin/ui.py:158
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
-"هیچ رسانه مناسبی یافت نگردید پس فلش مموری یا کارت حافظه یا هارد دیسک را متصل "
-"کنید"
-
-#
-#: ../plugin/ui.py:164
-msgid "No backup present"
-msgstr "در حال حاضر هیچ نسخه پشتیبانی وجود ندارد"
-
-#
-#: ../plugin/ui.py:179
-msgid "Last backup date"
-msgstr "زمان آخرین تهیه نسخه پشتیبان"
-
-#
-#: ../plugin/ui.py:182
-msgid "Disabled"
-msgstr "غیر فعال گردید"
-
-#
-#: ../plugin/ui.py:184
-msgid "Disable"
-msgstr "غیر فعال"
-
-#
-#: ../plugin/ui.py:215
-msgid "Select files to backup"
-msgstr "پوشه مورد نظر جهت ذخیره سازی نسخه پشتیبان را انتخاب کنید"
-
-#
-#: ../plugin/ui.py:216
-msgid "Run a backup now"
-msgstr "در حال اجرای نسخه پشتیبان"
-
-#: ../plugin/ui.py:217
 msgid "Backup EPG cache"
 msgstr ""
 
 #
-#: ../plugin/ui.py:220
+msgid "Backup location"
+msgstr "محل ذخیره سازی نسخه پشتیبان"
+
+#
+msgid "CF"
+msgstr "کارت حافظه از نوع از نوع سی اف"
+
+#
+msgid "Cancel"
+msgstr "لغو کردن"
+
+#
+msgid "Create Autoinstall"
+msgstr "ایجاد یک نصب خودکار"
+
+#
+msgid "Daily automatic backup"
+msgstr "تهیه نسخه پشتیبان بصورت روزانه"
+
+#
+msgid "Deselect"
+msgstr "لغو مورد انتخاب شده"
+
+#
+msgid "Disable"
+msgstr "غیر فعال"
+
+#
+msgid "Disabled"
+msgstr "غیر فعال گردید"
+
+#
 msgid "Don't auto-restore this next time"
 msgstr "برای بار بعدی بصورت خودکار بازگردانی نکن "
 
-#: ../plugin/ui.py:222
+#
+msgid "Done"
+msgstr "عملیتات انجام گردد"
+
+msgid "EPG cache backup"
+msgstr ""
+
+#
+msgid "Failed"
+msgstr "عملیات ناموفق"
+
+#
+msgid "Harddisk"
+msgstr "هارد دیسک"
+
+#
+msgid "Last backup date"
+msgstr "زمان آخرین تهیه نسخه پشتیبان"
+
+#
+msgid "Manual"
+msgstr "کار بصورت دستی "
+
+#
+msgid "No backup present"
+msgstr "در حال حاضر هیچ نسخه پشتیبانی وجود ندارد"
+
+#
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "هیچ رسانه مناسبی یافت نگردید پس فلش مموری یا کارت حافظه یا هارد دیسک را متصل کنید"
+
+#
+msgid "Nowhere"
+msgstr "هیچ کجا "
+
+#
+msgid "Ok"
+msgstr "کار تایید می شود "
+
 msgid "Remove autoinstall list"
 msgstr ""
 
 #
-#: ../plugin/ui.py:223
 msgid "Restore"
 msgstr "بازگردان کردن"
 
 #
-#: ../plugin/ui.py:247 ../plugin/ui.py:270
-msgid "Running"
+msgid "Run a backup now"
+msgstr "در حال اجرای نسخه پشتیبان"
+
+#
+#, fuzzy
+msgid "Run autoinstall"
+msgstr "ایجاد یک نصب خودکار"
+
+#
+#, fuzzy
+msgid "Running..."
 msgstr "عملیات در حال اجرا است"
 
 #
-#: ../plugin/ui.py:260
+msgid "SD"
+msgstr "کارت حافظه از نوع اس دی"
+
+#
+msgid "Save"
+msgstr "ذخیره سازی عملیات"
+
+msgid "Save previous backup"
+msgstr ""
+
+#
+msgid "Select"
+msgstr "انتخاب کردن"
+
+#
+msgid "Select files to backup"
+msgstr "پوشه مورد نظر جهت ذخیره سازی نسخه پشتیبان را انتخاب کنید"
+
+#
+msgid "Select files/folders to backup"
+msgstr "فایل و پوشه مورد نظر را جهت ذخیره سازی نسخه پشتیبان انتخاب کنید"
+
+#
+#, fuzzy, python-format
+msgid ""
+"This will reinstall all plugins from your backup on %s.\n"
+"Do you really want to reinstall?"
+msgstr ""
+"فایل شما بازگردانی خواهد شد %s.\n"
+" آیا واقعا قصد بازگردانی تنظیمات و راه اندازی مجدد را دارید ؟"
+
+#
 #, python-format
 msgid ""
 "This will restore your backup on %s.\n"
@@ -161,34 +165,8 @@ msgstr ""
 " آیا واقعا قصد بازگردانی تنظیمات و راه اندازی مجدد را دارید ؟"
 
 #
-#: ../plugin/ui.py:298
-msgid "Failed"
-msgstr "عملیات ناموفق"
+msgid "USB"
+msgstr "فلش مموری"
 
-#
-#: ../plugin/ui.py:300
-msgid "Done"
-msgstr "عملیتات انجام گردد"
-
-#
-#: ../plugin/ui.py:329
-msgid "Save"
-msgstr "ذخیره سازی عملیات"
-
-#
-#: ../plugin/ui.py:359
-msgid "Select files/folders to backup"
-msgstr "فایل و پوشه مورد نظر را جهت ذخیره سازی نسخه پشتیبان انتخاب کنید"
-
-#
-#: ../plugin/ui.py:365
-msgid "Deselect"
-msgstr "لغو مورد انتخاب شده"
-
-#
-#: ../plugin/ui.py:367
-msgid "Select"
-msgstr "انتخاب کردن"
-
-msgid "Save previous backup"
+msgid "root"
 msgstr ""
