--- a/plugin/locale/fi/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/fi/LC_MESSAGES/AutoBackup.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2-plugin-extensions-autobackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-06 14:13+0200\n"
+"POT-Creation-Date: 2018-06-07 17:04+0200\n"
 "PO-Revision-Date: 2016-05-06 14:14+0200\n"
 "Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: daddelfalk\n"
@@ -14,153 +14,128 @@ msgstr ""
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Generator: Poedit 1.8.7\n"
 
-#: ../plugin/plugin.py:123
-msgid "Automatic settings backup"
-msgstr "Automaattiset asetukset varmuuskopiolle"
-
-#: ../plugin/ui.py:18 ../plugin/ui.py:39
-msgid "Harddisk"
-msgstr "Kovalevy"
-
-#: ../plugin/ui.py:19
-msgid "USB"
-msgstr "USB"
-
-#: ../plugin/ui.py:20 ../plugin/ui.py:37
-msgid "CF"
-msgstr "CF"
-
-#: ../plugin/ui.py:21
-msgid "SD"
-msgstr "SD"
-
-#: ../plugin/ui.py:34
-msgid "root"
-msgstr ""
-
-#: ../plugin/ui.py:93 ../plugin/ui.py:140
 msgid "AutoBackup Configuration"
 msgstr "AutoBackup Asetukset"
 
-#: ../plugin/ui.py:106
-msgid "Nowhere"
-msgstr "Ei missään"
+msgid "Automatic settings backup"
+msgstr "Automaattiset asetukset varmuuskopiolle"
 
-#: ../plugin/ui.py:109
-msgid "Backup location"
-msgstr "Varmuuskopion hakemisto"
-
-#: ../plugin/ui.py:110
-msgid "Daily automatic backup"
-msgstr "Päivittäinen automaattinen varmuuskopio"
-
-#: ../plugin/ui.py:111
 msgid "Automatic start time"
 msgstr "Automaattinen aloitusaika"
 
-#: ../plugin/ui.py:112
-msgid "Create Autoinstall"
-msgstr "Tee Automaattinen asennus"
-
-#: ../plugin/ui.py:113
-msgid "EPG cache backup"
-msgstr ""
-
-#: ../plugin/ui.py:116 ../plugin/ui.py:328
-msgid "Cancel"
-msgstr "Peruuta"
-
-#: ../plugin/ui.py:117
-msgid "Ok"
-msgstr "Ok"
-
-#: ../plugin/ui.py:118
-msgid "Manual"
-msgstr "Manuaalinen"
-
-#: ../plugin/ui.py:158
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
-"Sopivaa tallennuspaikkaa ei löytynyt, lisää USB tikku, muistikortti tai "
-"kovalevy."
-
-#: ../plugin/ui.py:164
-msgid "No backup present"
-msgstr "Varmuuskopioita ei löydy"
-
-#: ../plugin/ui.py:179
-msgid "Last backup date"
-msgstr "Viimeisen varmuuskopion päiväys"
-
-#: ../plugin/ui.py:182
-msgid "Disabled"
-msgstr "Pois käytöstä"
-
-#: ../plugin/ui.py:184
-msgid "Disable"
-msgstr "Poista käytöstä"
-
-#: ../plugin/ui.py:215
-msgid "Select files to backup"
-msgstr "Valitse varmuuskopioitavat tiedostot"
-
-#: ../plugin/ui.py:216
-msgid "Run a backup now"
-msgstr "Käynnistä varmuuskopiointi nyt"
-
-#: ../plugin/ui.py:217
 msgid "Backup EPG cache"
 msgstr ""
 
-#: ../plugin/ui.py:220
+msgid "Backup location"
+msgstr "Varmuuskopion hakemisto"
+
+msgid "CF"
+msgstr "CF"
+
+msgid "Cancel"
+msgstr "Peruuta"
+
+msgid "Create Autoinstall"
+msgstr "Tee Automaattinen asennus"
+
+msgid "Daily automatic backup"
+msgstr "Päivittäinen automaattinen varmuuskopio"
+
+msgid "Deselect"
+msgstr "Poista valinta"
+
+msgid "Disable"
+msgstr "Poista käytöstä"
+
+msgid "Disabled"
+msgstr "Pois käytöstä"
+
 msgid "Don't auto-restore this next time"
 msgstr "Älä tee automaattista palautusta ensi kerralla"
 
-#: ../plugin/ui.py:222
+msgid "Done"
+msgstr "Tehty"
+
+msgid "EPG cache backup"
+msgstr ""
+
+msgid "Failed"
+msgstr "Epäonnistui"
+
+msgid "Harddisk"
+msgstr "Kovalevy"
+
+msgid "Last backup date"
+msgstr "Viimeisen varmuuskopion päiväys"
+
+msgid "Manual"
+msgstr "Manuaalinen"
+
+msgid "No backup present"
+msgstr "Varmuuskopioita ei löydy"
+
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Sopivaa tallennuspaikkaa ei löytynyt, lisää USB tikku, muistikortti tai kovalevy."
+
+msgid "Nowhere"
+msgstr "Ei missään"
+
+msgid "Ok"
+msgstr "Ok"
+
 msgid "Remove autoinstall list"
 msgstr ""
 
-#: ../plugin/ui.py:223
 msgid "Restore"
 msgstr "Palauta"
 
-#: ../plugin/ui.py:247 ../plugin/ui.py:270
-msgid "Running"
+msgid "Run a backup now"
+msgstr "Käynnistä varmuuskopiointi nyt"
+
+#, fuzzy
+msgid "Run autoinstall"
+msgstr "Tee Automaattinen asennus"
+
+#, fuzzy
+msgid "Running..."
 msgstr "Käynnissä"
 
-#: ../plugin/ui.py:260
+msgid "SD"
+msgstr "SD"
+
+msgid "Save"
+msgstr "Tallenna"
+
+msgid "Save previous backup"
+msgstr ""
+
+msgid "Select"
+msgstr "Valitse"
+
+msgid "Select files to backup"
+msgstr "Valitse varmuuskopioitavat tiedostot"
+
+msgid "Select files/folders to backup"
+msgstr "Valitse varmuuskopioitavat tiedostot/hakemistot"
+
+#, fuzzy, python-format
+msgid ""
+"This will reinstall all plugins from your backup on %s.\n"
+"Do you really want to reinstall?"
+msgstr ""
+"Tämä palauttaa varmuuskopiosi %s.\n"
+"Haluatko todella palauttaa nämä asetukset ja uudelleenkäynnistää vastaanottimesi?"
+
 #, python-format
 msgid ""
 "This will restore your backup on %s.\n"
 "Do you really want to restore those settings and restart?"
 msgstr ""
 "Tämä palauttaa varmuuskopiosi %s.\n"
-"Haluatko todella palauttaa nämä asetukset ja uudelleenkäynnistää "
-"vastaanottimesi?"
+"Haluatko todella palauttaa nämä asetukset ja uudelleenkäynnistää vastaanottimesi?"
 
-#: ../plugin/ui.py:298
-msgid "Failed"
-msgstr "Epäonnistui"
+msgid "USB"
+msgstr "USB"
 
-#: ../plugin/ui.py:300
-msgid "Done"
-msgstr "Tehty"
-
-#: ../plugin/ui.py:329
-msgid "Save"
-msgstr "Tallenna"
-
-#: ../plugin/ui.py:359
-msgid "Select files/folders to backup"
-msgstr "Valitse varmuuskopioitavat tiedostot/hakemistot"
-
-#: ../plugin/ui.py:365
-msgid "Deselect"
-msgstr "Poista valinta"
-
-#: ../plugin/ui.py:367
-msgid "Select"
-msgstr "Valitse"
-
-msgid "Save previous backup"
+msgid "root"
 msgstr ""
