--- a/plugin/locale/fr/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/fr/LC_MESSAGES/AutoBackup.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2-plugin-extensions-autobackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-11 20:56+0200\n"
-"PO-Revision-Date: 2018-05-11 21:03+0200\n"
+"POT-Creation-Date: 2018-06-07 17:04+0200\n"
+"PO-Revision-Date: 2018-06-07 17:10+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -11,145 +11,110 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 2.0.7\n"
+"X-Generator: Poedit 2.0.8\n"
 
-#: ../plugin/ui.py:96 ../plugin/ui.py:144
 msgid "AutoBackup Configuration"
 msgstr "Configuration de AutoBackup"
 
-#: ../plugin/plugin.py:125
 msgid "Automatic settings backup"
 msgstr "Sauvegarde automatique des réglages"
 
-#: ../plugin/ui.py:114
 msgid "Automatic start time"
 msgstr "Heure de lancement automatique"
 
-#: ../plugin/ui.py:221
 msgid "Backup EPG cache"
 msgstr "Sauvegarder le cache EPG"
 
-#: ../plugin/ui.py:112
 msgid "Backup location"
 msgstr "Emplacement de la sauvegarde"
 
-#: ../plugin/ui.py:22 ../plugin/ui.py:39
 msgid "CF"
 msgstr "CF"
 
-#: ../plugin/ui.py:120 ../plugin/ui.py:355
 msgid "Cancel"
 msgstr "Annuler"
 
-#: ../plugin/ui.py:115
 msgid "Create Autoinstall"
 msgstr "Créer une installation automatique"
 
-#: ../plugin/ui.py:113
 msgid "Daily automatic backup"
 msgstr "Sauvegarde automatique quotidienne"
 
-#: ../plugin/ui.py:392
 msgid "Deselect"
 msgstr "Désélectionner"
 
-#: ../plugin/ui.py:188
 msgid "Disable"
-msgstr "Désactiver"
+msgstr "Supprimer"
 
-#: ../plugin/ui.py:186
 msgid "Disabled"
-msgstr "Désactivé"
+msgstr "Supprimé"
 
-#: ../plugin/ui.py:224
 msgid "Don't auto-restore this next time"
 msgstr "Pas de restauration auto la prochaine fois"
 
-#: ../plugin/ui.py:328
 msgid "Done"
 msgstr "Effectué"
 
-#: ../plugin/ui.py:116
 msgid "EPG cache backup"
 msgstr "Sauvegarde du cache EPG"
 
-#: ../plugin/ui.py:326
 msgid "Failed"
 msgstr "Echoué"
 
-#: ../plugin/ui.py:20 ../plugin/ui.py:41
 msgid "Harddisk"
 msgstr "Disque dur"
 
-#: ../plugin/ui.py:183
 msgid "Last backup date"
 msgstr "Date de la dernière sauvegarde"
 
-#: ../plugin/ui.py:122
 msgid "Manual"
 msgstr "Manuel"
 
-#: ../plugin/ui.py:168
 msgid "No backup present"
 msgstr "Aucune sauvegarde présente"
 
-#: ../plugin/ui.py:162
 msgid "No suitable media found, insert USB stick, flash card or harddisk."
 msgstr "Aucun média approprié trouvé, insérez une clé USB, carte flash ou disque dur."
 
-#: ../plugin/ui.py:109
 msgid "Nowhere"
 msgstr "Nulle part"
 
-#: ../plugin/ui.py:121
 msgid "Ok"
 msgstr "Ok"
 
-#: ../plugin/ui.py:227
 msgid "Remove autoinstall list"
 msgstr "Enlever la liste d’auto-installation"
 
-#: ../plugin/ui.py:228
 msgid "Restore"
 msgstr "Restaurer"
 
-#: ../plugin/ui.py:220
 msgid "Run a backup now"
 msgstr "Lancer une sauvegarde maintenant"
 
-#: ../plugin/ui.py:226
 msgid "Run autoinstall"
 msgstr "Exécuter l’auto-installation"
 
-#: ../plugin/ui.py:252 ../plugin/ui.py:275 ../plugin/ui.py:298
 msgid "Running..."
 msgstr "En cours d’exécution…"
 
-#: ../plugin/ui.py:23
 msgid "SD"
 msgstr "SD"
 
-#: ../plugin/ui.py:356
 msgid "Save"
 msgstr "Sauvegarder"
 
-#: ../plugin/ui.py:117
 msgid "Save previous backup"
 msgstr "Enregistrer la sauvegarde précédente"
 
-#: ../plugin/ui.py:394
 msgid "Select"
 msgstr "Sélectionner"
 
-#: ../plugin/ui.py:219
 msgid "Select files to backup"
 msgstr "Sélectionner les fichiers à sauvegarder"
 
-#: ../plugin/ui.py:386
 msgid "Select files/folders to backup"
 msgstr "Sélectionner les fichiers/dossiers à sauvegarder"
 
-#: ../plugin/ui.py:288
 #, python-format
 msgid ""
 "This will reinstall all plugins from your backup on %s.\n"
@@ -158,7 +123,6 @@ msgstr ""
 "Ceci va réinstaller tous les plugins/extensions de votre sauvegarde sur %s.\n"
 "Voulez-vous vraiment les réinstaller?"
 
-#: ../plugin/ui.py:265
 #, python-format
 msgid ""
 "This will restore your backup on %s.\n"
@@ -167,10 +131,8 @@ msgstr ""
 "Ceci va restaurer votre sauvegarde sur %s.\n"
 "Voulez-vous vraiment restaurer ces réglages et redémarrer?"
 
-#: ../plugin/ui.py:21
 msgid "USB"
 msgstr "USB"
 
-#: ../plugin/ui.py:36
 msgid "root"
 msgstr "racine"
