--- a/plugin/locale/lt/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/lt/LC_MESSAGES/AutoBackup.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: AutoBackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-06 14:14+0200\n"
+"POT-Creation-Date: 2018-06-07 17:04+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Vytenis P. <vyteniui@gmail.com>\n"
 "Language-Team: Vytenis P. vyteniui@gmail.com\n"
@@ -10,125 +10,122 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Poedit 2.0.4\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
-#: ../plugin/plugin.py:123
-msgid "Automatic settings backup"
-msgstr "Automatinė nustatymų atsarginė kopija"
-
-#: ../plugin/ui.py:18 ../plugin/ui.py:39
-msgid "Harddisk"
-msgstr "HDD"
-
-#: ../plugin/ui.py:19
-msgid "USB"
-msgstr "USB"
-
-#: ../plugin/ui.py:20 ../plugin/ui.py:37
-msgid "CF"
-msgstr "CF"
-
-#: ../plugin/ui.py:21
-msgid "SD"
-msgstr "SD"
-
-#: ../plugin/ui.py:34
-msgid "root"
-msgstr "pagrindinis"
-
-#: ../plugin/ui.py:93 ../plugin/ui.py:140
 msgid "AutoBackup Configuration"
 msgstr "Automatinės atsarginės kopijos konfigūravimas"
 
-#: ../plugin/ui.py:106
-msgid "Nowhere"
-msgstr "Niekur"
+msgid "Automatic settings backup"
+msgstr "Automatinė nustatymų atsarginė kopija"
 
-#: ../plugin/ui.py:109
-msgid "Backup location"
-msgstr "Atsarginės kopijos vieta"
-
-#: ../plugin/ui.py:110
-msgid "Daily automatic backup"
-msgstr "Kasdieninė automatinė atsarginė kopija"
-
-#: ../plugin/ui.py:111
 msgid "Automatic start time"
 msgstr "Automatiško paleidimo laikas"
 
-#: ../plugin/ui.py:112
-msgid "Create Autoinstall"
-msgstr "Sukurti autoįdiegimą"
-
-#: ../plugin/ui.py:113
-msgid "EPG cache backup"
-msgstr "EPG talpyklos atsarginė kopija"
-
-#: ../plugin/ui.py:116 ../plugin/ui.py:328
-msgid "Cancel"
-msgstr "Atšaukti"
-
-#: ../plugin/ui.py:117
-msgid "Ok"
-msgstr "Gerai"
-
-#: ../plugin/ui.py:118
-msgid "Manual"
-msgstr "Rankiniu būdu"
-
-#: ../plugin/ui.py:158
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
-"Tinkamų laikmenų nerasta, įdėkite USB atmintinę, atminties kortelę, ar HDD."
-
-#: ../plugin/ui.py:164
-msgid "No backup present"
-msgstr "Atsarginių kopijų nėra"
-
-#: ../plugin/ui.py:179
-msgid "Last backup date"
-msgstr "Paskutinės atsarginės kopijos data"
-
-#: ../plugin/ui.py:182
-msgid "Disabled"
-msgstr "Išjungtas"
-
-#: ../plugin/ui.py:184
-msgid "Disable"
-msgstr "Išjungti"
-
-#: ../plugin/ui.py:215
-msgid "Select files to backup"
-msgstr "Pasirinkite failus atsarginei kopijai"
-
-#: ../plugin/ui.py:216
-msgid "Run a backup now"
-msgstr "Atlikti atsarginį kopijavimą dabar"
-
-#: ../plugin/ui.py:217
 msgid "Backup EPG cache"
 msgstr "Kopijuoti EPG talpyklą"
 
-#: ../plugin/ui.py:220
+msgid "Backup location"
+msgstr "Atsarginės kopijos vieta"
+
+msgid "CF"
+msgstr "CF"
+
+msgid "Cancel"
+msgstr "Atšaukti"
+
+msgid "Create Autoinstall"
+msgstr "Sukurti autoįdiegimą"
+
+msgid "Daily automatic backup"
+msgstr "Kasdieninė automatinė atsarginė kopija"
+
+msgid "Deselect"
+msgstr "Atšaukti pasirinkimą"
+
+msgid "Disable"
+msgstr "Išjungti"
+
+msgid "Disabled"
+msgstr "Išjungtas"
+
 msgid "Don't auto-restore this next time"
 msgstr "Kitą kartą šio į autoatkūrimą neįtraukti"
 
-#: ../plugin/ui.py:222
+msgid "Done"
+msgstr "Atlikta"
+
+msgid "EPG cache backup"
+msgstr "EPG talpyklos atsarginė kopija"
+
+msgid "Failed"
+msgstr "Nepavyko"
+
+msgid "Harddisk"
+msgstr "HDD"
+
+msgid "Last backup date"
+msgstr "Paskutinės atsarginės kopijos data"
+
+msgid "Manual"
+msgstr "Rankiniu būdu"
+
+msgid "No backup present"
+msgstr "Atsarginių kopijų nėra"
+
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Tinkamų laikmenų nerasta, įdėkite USB atmintinę, atminties kortelę, ar HDD."
+
+msgid "Nowhere"
+msgstr "Niekur"
+
+msgid "Ok"
+msgstr "Gerai"
+
 msgid "Remove autoinstall list"
 msgstr "Pašalinti autoinstaliacijos sąrašą"
 
-#: ../plugin/ui.py:223
 msgid "Restore"
 msgstr "Atkurti"
 
-#: ../plugin/ui.py:247 ../plugin/ui.py:270
-msgid "Running"
+msgid "Run a backup now"
+msgstr "Atlikti atsarginį kopijavimą dabar"
+
+#, fuzzy
+msgid "Run autoinstall"
+msgstr "Pašalinti autoinstaliacijos sąrašą"
+
+#, fuzzy
+msgid "Running..."
 msgstr "Veikia"
 
-#: ../plugin/ui.py:260
+msgid "SD"
+msgstr "SD"
+
+msgid "Save"
+msgstr "Įrašyti"
+
+msgid "Save previous backup"
+msgstr "Išsaugoti ankstesnę atsarginę kopiją"
+
+msgid "Select"
+msgstr "Pasirinkti"
+
+msgid "Select files to backup"
+msgstr "Pasirinkite failus atsarginei kopijai"
+
+msgid "Select files/folders to backup"
+msgstr "Pasirinkite failus ir katalogus atsarginei kopijai"
+
+#, fuzzy, python-format
+msgid ""
+"This will reinstall all plugins from your backup on %s.\n"
+"Do you really want to reinstall?"
+msgstr ""
+"Atsarginė kopija bus atkurta į %s.\n"
+"Ar tikrai norite atkurti šiuos nustatymus ir paleisti iš naujo?"
+
 #, python-format
 msgid ""
 "This will restore your backup on %s.\n"
@@ -137,29 +134,8 @@ msgstr ""
 "Atsarginė kopija bus atkurta į %s.\n"
 "Ar tikrai norite atkurti šiuos nustatymus ir paleisti iš naujo?"
 
-#: ../plugin/ui.py:298
-msgid "Failed"
-msgstr "Nepavyko"
+msgid "USB"
+msgstr "USB"
 
-#: ../plugin/ui.py:300
-msgid "Done"
-msgstr "Atlikta"
-
-#: ../plugin/ui.py:329
-msgid "Save"
-msgstr "Įrašyti"
-
-#: ../plugin/ui.py:359
-msgid "Select files/folders to backup"
-msgstr "Pasirinkite failus ir katalogus atsarginei kopijai"
-
-#: ../plugin/ui.py:365
-msgid "Deselect"
-msgstr "Atšaukti pasirinkimą"
-
-#: ../plugin/ui.py:367
-msgid "Select"
-msgstr "Pasirinkti"
-
-msgid "Save previous backup"
-msgstr "Išsaugoti ankstesnę atsarginę kopiją"
+msgid "root"
+msgstr "pagrindinis"
