--- a/plugin/locale/nb/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/nb/LC_MESSAGES/AutoBackup.po
@@ -7,132 +7,131 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-26 14:22+0100\n"
+"POT-Creation-Date: 2018-06-07 17:04+0200\n"
 "PO-Revision-Date: 2017-12-26 15:42+0100\n"
+"Last-Translator: GeirJ. <dummy@dummy.com>\n"
 "Language-Team: \n"
+"Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Basepath: .\n"
 "X-Generator: Poedit 2.0.5\n"
-"Last-Translator: GeirJ. <dummy@dummy.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: nb\n"
 "X-Poedit-SearchPath-0: ..\n"
 
-#: ../plugin/plugin.py:123
-msgid "Automatic settings backup"
-msgstr "Automatisk sikkerhetskopi av innstillinger"
-
-#: ../plugin/ui.py:18 ../plugin/ui.py:39
-msgid "Harddisk"
-msgstr "Harddisk"
-
-#: ../plugin/ui.py:19
-msgid "USB"
-msgstr "USB"
-
-#: ../plugin/ui.py:20 ../plugin/ui.py:37
-msgid "CF"
-msgstr "CF"
-
-#: ../plugin/ui.py:21
-msgid "SD"
-msgstr "SD"
-
-#: ../plugin/ui.py:34
-msgid "root"
-msgstr "rot"
-
-#: ../plugin/ui.py:93 ../plugin/ui.py:140
 msgid "AutoBackup Configuration"
 msgstr "AutoBackup-konfigurasjon"
 
-#: ../plugin/ui.py:106
-msgid "Nowhere"
-msgstr "Ukjent"
+msgid "Automatic settings backup"
+msgstr "Automatisk sikkerhetskopi av innstillinger"
 
-#: ../plugin/ui.py:109
-msgid "Backup location"
-msgstr "Sted for sikkerhetskopi"
-
-#: ../plugin/ui.py:110
-msgid "Daily automatic backup"
-msgstr "Daglig automatisk sikkerhetskopiering"
-
-#: ../plugin/ui.py:111
 msgid "Automatic start time"
 msgstr "Automatisk start tid"
 
-#: ../plugin/ui.py:112
-msgid "Create Autoinstall"
-msgstr "Opprett autoinstall"
-
-#: ../plugin/ui.py:113
-msgid "EPG cache backup"
-msgstr "Sikkerhetskopier EPG lager"
-
-#: ../plugin/ui.py:116 ../plugin/ui.py:328
-msgid "Cancel"
-msgstr "Avbryt"
-
-#: ../plugin/ui.py:117
-msgid "Ok"
-msgstr "Ok"
-
-#: ../plugin/ui.py:118
-msgid "Manual"
-msgstr "Manuell"
-
-#: ../plugin/ui.py:158
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr "Ikke noe passende media funnet. Sett inn USB pinne, minnekort eller harddisk"
-
-#: ../plugin/ui.py:164
-msgid "No backup present"
-msgstr "Finner ingen sikkerhetskopi"
-
-#: ../plugin/ui.py:179
-msgid "Last backup date"
-msgstr "Siste dato for sikkerhetskopi"
-
-#: ../plugin/ui.py:182
-msgid "Disabled"
-msgstr "Frakoblet"
-
-#: ../plugin/ui.py:184
-msgid "Disable"
-msgstr "Frakoble"
-
-#: ../plugin/ui.py:215
-msgid "Select files to backup"
-msgstr "Velg filer til sikkerhetskopi"
-
-#: ../plugin/ui.py:216
-msgid "Run a backup now"
-msgstr "Ta en sikkerhetskopi nå"
-
-#: ../plugin/ui.py:217
 msgid "Backup EPG cache"
 msgstr "Sikkerhetskopier EPG lager"
 
-#: ../plugin/ui.py:220
+msgid "Backup location"
+msgstr "Sted for sikkerhetskopi"
+
+msgid "CF"
+msgstr "CF"
+
+msgid "Cancel"
+msgstr "Avbryt"
+
+msgid "Create Autoinstall"
+msgstr "Opprett autoinstall"
+
+msgid "Daily automatic backup"
+msgstr "Daglig automatisk sikkerhetskopiering"
+
+msgid "Deselect"
+msgstr "Opphev"
+
+msgid "Disable"
+msgstr "Frakoble"
+
+msgid "Disabled"
+msgstr "Frakoblet"
+
 msgid "Don't auto-restore this next time"
 msgstr "Ikke ta auto gjenoppretting neste gang"
 
-#: ../plugin/ui.py:222
+msgid "Done"
+msgstr "Ok"
+
+msgid "EPG cache backup"
+msgstr "Sikkerhetskopier EPG lager"
+
+msgid "Failed"
+msgstr "Feilet"
+
+msgid "Harddisk"
+msgstr "Harddisk"
+
+msgid "Last backup date"
+msgstr "Siste dato for sikkerhetskopi"
+
+msgid "Manual"
+msgstr "Manuell"
+
+msgid "No backup present"
+msgstr "Finner ingen sikkerhetskopi"
+
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Ikke noe passende media funnet. Sett inn USB pinne, minnekort eller harddisk"
+
+msgid "Nowhere"
+msgstr "Ukjent"
+
+msgid "Ok"
+msgstr "Ok"
+
 msgid "Remove autoinstall list"
 msgstr "Fjern autoinstall mappe"
 
-#: ../plugin/ui.py:223
 msgid "Restore"
 msgstr "Gjenopprett"
 
-#: ../plugin/ui.py:247 ../plugin/ui.py:270
-msgid "Running"
+msgid "Run a backup now"
+msgstr "Ta en sikkerhetskopi nå"
+
+#, fuzzy
+msgid "Run autoinstall"
+msgstr "Fjern autoinstall mappe"
+
+#, fuzzy
+msgid "Running..."
 msgstr "Kjører"
 
-#: ../plugin/ui.py:260
+msgid "SD"
+msgstr "SD"
+
+msgid "Save"
+msgstr "Lagre"
+
+msgid "Save previous backup"
+msgstr "Lagre forrige sikkerhetskopi"
+
+msgid "Select"
+msgstr "Velg"
+
+msgid "Select files to backup"
+msgstr "Velg filer til sikkerhetskopi"
+
+msgid "Select files/folders to backup"
+msgstr "Velg filer/mapper til sikkerhetskopi"
+
+#, fuzzy, python-format
+msgid ""
+"This will reinstall all plugins from your backup on %s.\n"
+"Do you really want to reinstall?"
+msgstr ""
+"Dette vil gjenopprette din sikkerhetskopi på %s.\n"
+"Vil du virkelig gjenopprette innstillingene og starte på nytt?"
+
 #, python-format
 msgid ""
 "This will restore your backup on %s.\n"
@@ -141,29 +140,8 @@ msgstr ""
 "Dette vil gjenopprette din sikkerhetskopi på %s.\n"
 "Vil du virkelig gjenopprette innstillingene og starte på nytt?"
 
-#: ../plugin/ui.py:298
-msgid "Failed"
-msgstr "Feilet"
+msgid "USB"
+msgstr "USB"
 
-#: ../plugin/ui.py:300
-msgid "Done"
-msgstr "Ok"
-
-#: ../plugin/ui.py:329
-msgid "Save"
-msgstr "Lagre"
-
-#: ../plugin/ui.py:359
-msgid "Select files/folders to backup"
-msgstr "Velg filer/mapper til sikkerhetskopi"
-
-#: ../plugin/ui.py:365
-msgid "Deselect"
-msgstr "Opphev"
-
-#: ../plugin/ui.py:367
-msgid "Select"
-msgstr "Velg"
-
-msgid "Save previous backup"
-msgstr "Lagre forrige sikkerhetskopi"
+msgid "root"
+msgstr "rot"
