--- a/plugin/locale/pl/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/pl/LC_MESSAGES/AutoBackup.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: AutoBackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-06 14:14+0200\n"
+"POT-Creation-Date: 2018-06-07 17:04+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: \n"
@@ -11,124 +11,121 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Poedit 2.0.4\n"
 
-#: ../plugin/plugin.py:123
-msgid "Automatic settings backup"
-msgstr "Automatyczna kopia zapasowa ustawień"
-
-#: ../plugin/ui.py:18 ../plugin/ui.py:39
-msgid "Harddisk"
-msgstr "HDD"
-
-#: ../plugin/ui.py:19
-msgid "USB"
-msgstr "USB"
-
-#: ../plugin/ui.py:20 ../plugin/ui.py:37
-msgid "CF"
-msgstr "CF"
-
-#: ../plugin/ui.py:21
-msgid "SD"
-msgstr "SD"
-
-#: ../plugin/ui.py:34
-msgid "root"
-msgstr ""
-
-#: ../plugin/ui.py:93 ../plugin/ui.py:140
 msgid "AutoBackup Configuration"
 msgstr "Konfiguracja AutoBackup"
 
-#: ../plugin/ui.py:106
-msgid "Nowhere"
-msgstr "Nigdzie"
+msgid "Automatic settings backup"
+msgstr "Automatyczna kopia zapasowa ustawień"
 
-#: ../plugin/ui.py:109
-msgid "Backup location"
-msgstr "Lokalizacja kopii zapasowej"
-
-#: ../plugin/ui.py:110
-msgid "Daily automatic backup"
-msgstr "Codzienna automatyczna kopia zapasowa"
-
-#: ../plugin/ui.py:111
 msgid "Automatic start time"
 msgstr "Automatycznie twórz kopię zapasową o:"
 
-#: ../plugin/ui.py:112
-msgid "Create Autoinstall"
-msgstr "Twórz plik Autoinstall"
-
-#: ../plugin/ui.py:113
-msgid "EPG cache backup"
-msgstr "Kopia zapasowa EPG cache"
-
-#: ../plugin/ui.py:116 ../plugin/ui.py:328
-msgid "Cancel"
-msgstr "Anuluj"
-
-#: ../plugin/ui.py:117
-msgid "Ok"
-msgstr "OK"
-
-#: ../plugin/ui.py:118
-msgid "Manual"
-msgstr "Ręcznie"
-
-#: ../plugin/ui.py:158
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
-"Brak odpowiedniego nośnika, podłącz pena USB, kartę CF albo dysk twardy"
-
-#: ../plugin/ui.py:164
-msgid "No backup present"
-msgstr "Nie znaleziono kopii zapasowej"
-
-#: ../plugin/ui.py:179
-msgid "Last backup date"
-msgstr "Data ostatniej kopii zapasowej"
-
-#: ../plugin/ui.py:182
-msgid "Disabled"
-msgstr "Wyłączone"
-
-#: ../plugin/ui.py:184
-msgid "Disable"
-msgstr "Wyłącz"
-
-#: ../plugin/ui.py:215
-msgid "Select files to backup"
-msgstr "Wybierz pliki do kopii zapasowej"
-
-#: ../plugin/ui.py:216
-msgid "Run a backup now"
-msgstr "Wykonaj kopię zapasową teraz"
-
-#: ../plugin/ui.py:217
 msgid "Backup EPG cache"
 msgstr "Wykonaj kopię zapasową EPG cache"
 
-#: ../plugin/ui.py:220
+msgid "Backup location"
+msgstr "Lokalizacja kopii zapasowej"
+
+msgid "CF"
+msgstr "CF"
+
+msgid "Cancel"
+msgstr "Anuluj"
+
+msgid "Create Autoinstall"
+msgstr "Twórz plik Autoinstall"
+
+msgid "Daily automatic backup"
+msgstr "Codzienna automatyczna kopia zapasowa"
+
+msgid "Deselect"
+msgstr "Odznacz"
+
+msgid "Disable"
+msgstr "Wyłącz"
+
+msgid "Disabled"
+msgstr "Wyłączone"
+
 msgid "Don't auto-restore this next time"
 msgstr "Nie przywracaj automatycznie następnym razem"
 
-#: ../plugin/ui.py:222
+msgid "Done"
+msgstr "Zrobione"
+
+msgid "EPG cache backup"
+msgstr "Kopia zapasowa EPG cache"
+
+msgid "Failed"
+msgstr "Nie powiodło się"
+
+msgid "Harddisk"
+msgstr "HDD"
+
+msgid "Last backup date"
+msgstr "Data ostatniej kopii zapasowej"
+
+msgid "Manual"
+msgstr "Ręcznie"
+
+msgid "No backup present"
+msgstr "Nie znaleziono kopii zapasowej"
+
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr "Brak odpowiedniego nośnika, podłącz pena USB, kartę CF albo dysk twardy"
+
+msgid "Nowhere"
+msgstr "Nigdzie"
+
+msgid "Ok"
+msgstr "OK"
+
 msgid "Remove autoinstall list"
 msgstr "Usuń listę autoinstall"
 
-#: ../plugin/ui.py:223
 msgid "Restore"
 msgstr "Przywróć"
 
-#: ../plugin/ui.py:247 ../plugin/ui.py:270
-msgid "Running"
+msgid "Run a backup now"
+msgstr "Wykonaj kopię zapasową teraz"
+
+#, fuzzy
+msgid "Run autoinstall"
+msgstr "Usuń listę autoinstall"
+
+#, fuzzy
+msgid "Running..."
 msgstr "W toku"
 
-#: ../plugin/ui.py:260
+msgid "SD"
+msgstr "SD"
+
+msgid "Save"
+msgstr "Zapisz"
+
+msgid "Save previous backup"
+msgstr "Zapisuj poprzednią kopię zapasową"
+
+msgid "Select"
+msgstr "Wybierz"
+
+msgid "Select files to backup"
+msgstr "Wybierz pliki do kopii zapasowej"
+
+msgid "Select files/folders to backup"
+msgstr "Wybierz pliki/foldery do kopii zapasowej"
+
+#, fuzzy, python-format
+msgid ""
+"This will reinstall all plugins from your backup on %s.\n"
+"Do you really want to reinstall?"
+msgstr ""
+"Zostanie przywrócona kopia zapasowa z %s.\n"
+"Chcesz przywrócić te ustawienia i wykonać restart?"
+
 #, python-format
 msgid ""
 "This will restore your backup on %s.\n"
@@ -137,29 +134,8 @@ msgstr ""
 "Zostanie przywrócona kopia zapasowa z %s.\n"
 "Chcesz przywrócić te ustawienia i wykonać restart?"
 
-#: ../plugin/ui.py:298
-msgid "Failed"
-msgstr "Nie powiodło się"
+msgid "USB"
+msgstr "USB"
 
-#: ../plugin/ui.py:300
-msgid "Done"
-msgstr "Zrobione"
-
-#: ../plugin/ui.py:329
-msgid "Save"
-msgstr "Zapisz"
-
-#: ../plugin/ui.py:359
-msgid "Select files/folders to backup"
-msgstr "Wybierz pliki/foldery do kopii zapasowej"
-
-#: ../plugin/ui.py:365
-msgid "Deselect"
-msgstr "Odznacz"
-
-#: ../plugin/ui.py:367
-msgid "Select"
-msgstr "Wybierz"
-
-msgid "Save previous backup"
-msgstr "Zapisuj poprzednią kopię zapasową"
+msgid "root"
+msgstr ""
