--- a/plugin/locale/uk/LC_MESSAGES/AutoBackup.po
+++ b/plugin/locale/uk/LC_MESSAGES/AutoBackup.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: AutoBackup\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-05-06 14:14+0200\n"
+"POT-Creation-Date: 2018-06-07 17:04+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: neoatomic <neoatomic@users.noreply.github.com>\n"
 "Language-Team: http://gisclub.tv <irkoff@gmail.com>\n"
@@ -10,123 +10,121 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Poedit 1.8.7\n"
 
-#: ../plugin/plugin.py:123
-msgid "Automatic settings backup"
-msgstr "Налаштування автоматичного резервного копіювання"
-
-#: ../plugin/ui.py:18 ../plugin/ui.py:39
-msgid "Harddisk"
-msgstr "Жорсткий диск"
-
-#: ../plugin/ui.py:19
-msgid "USB"
-msgstr ""
-
-#: ../plugin/ui.py:20 ../plugin/ui.py:37
-msgid "CF"
-msgstr "CF"
-
-#: ../plugin/ui.py:21
-msgid "SD"
-msgstr "SD"
-
-#: ../plugin/ui.py:34
-msgid "root"
-msgstr ""
-
-#: ../plugin/ui.py:93 ../plugin/ui.py:140
 msgid "AutoBackup Configuration"
 msgstr "Налаштування AutoBackup"
 
-#: ../plugin/ui.py:106
-msgid "Nowhere"
-msgstr "Ніколи"
+msgid "Automatic settings backup"
+msgstr "Налаштування автоматичного резервного копіювання"
 
-#: ../plugin/ui.py:109
-msgid "Backup location"
-msgstr "Місце резервування"
-
-#: ../plugin/ui.py:110
-msgid "Daily automatic backup"
-msgstr "Щоденно автоматичне резервне копіювання"
-
-#: ../plugin/ui.py:111
 msgid "Automatic start time"
 msgstr "Час автоматичного резервного копіювання"
 
-#: ../plugin/ui.py:112
-msgid "Create Autoinstall"
-msgstr "Створення AutoInstall"
-
-#: ../plugin/ui.py:113
-msgid "EPG cache backup"
-msgstr ""
-
-#: ../plugin/ui.py:116 ../plugin/ui.py:328
-msgid "Cancel"
-msgstr "Відмінити"
-
-#: ../plugin/ui.py:117
-msgid "Ok"
-msgstr "Ok"
-
-#: ../plugin/ui.py:118
-msgid "Manual"
-msgstr "Ручна"
-
-#: ../plugin/ui.py:158
-msgid "No suitable media found, insert USB stick, flash card or harddisk."
-msgstr ""
-
-#: ../plugin/ui.py:164
-msgid "No backup present"
-msgstr "Відсутній backup"
-
-#: ../plugin/ui.py:179
-msgid "Last backup date"
-msgstr "Дата останнього резервного копіювання"
-
-#: ../plugin/ui.py:182
-msgid "Disabled"
-msgstr "Заборонити"
-
-#: ../plugin/ui.py:184
-msgid "Disable"
-msgstr "Заборонити"
-
-#: ../plugin/ui.py:215
-msgid "Select files to backup"
-msgstr "Вибір файлів для резервн. копіювання."
-
-#: ../plugin/ui.py:216
-msgid "Run a backup now"
-msgstr "Виконати резервне копіювання зараз"
-
-#: ../plugin/ui.py:217
 msgid "Backup EPG cache"
 msgstr ""
 
-#: ../plugin/ui.py:220
+msgid "Backup location"
+msgstr "Місце резервування"
+
+msgid "CF"
+msgstr "CF"
+
+msgid "Cancel"
+msgstr "Відмінити"
+
+msgid "Create Autoinstall"
+msgstr "Створення AutoInstall"
+
+msgid "Daily automatic backup"
+msgstr "Щоденно автоматичне резервне копіювання"
+
+msgid "Deselect"
+msgstr "Скасувати"
+
+msgid "Disable"
+msgstr "Заборонити"
+
+msgid "Disabled"
+msgstr "Заборонити"
+
 msgid "Don't auto-restore this next time"
 msgstr "Наступного разу автоматично не обновлювати"
 
-#: ../plugin/ui.py:222
+msgid "Done"
+msgstr "Закінчено"
+
+msgid "EPG cache backup"
+msgstr ""
+
+msgid "Failed"
+msgstr "Не вдалося"
+
+msgid "Harddisk"
+msgstr "Жорсткий диск"
+
+msgid "Last backup date"
+msgstr "Дата останнього резервного копіювання"
+
+msgid "Manual"
+msgstr "Ручна"
+
+msgid "No backup present"
+msgstr "Відсутній backup"
+
+msgid "No suitable media found, insert USB stick, flash card or harddisk."
+msgstr ""
+
+msgid "Nowhere"
+msgstr "Ніколи"
+
+msgid "Ok"
+msgstr "Ok"
+
 msgid "Remove autoinstall list"
 msgstr ""
 
-#: ../plugin/ui.py:223
 msgid "Restore"
 msgstr "Оновити"
 
-#: ../plugin/ui.py:247 ../plugin/ui.py:270
-msgid "Running"
+msgid "Run a backup now"
+msgstr "Виконати резервне копіювання зараз"
+
+#, fuzzy
+msgid "Run autoinstall"
+msgstr "Створення AutoInstall"
+
+#, fuzzy
+msgid "Running..."
 msgstr "Запуск"
 
-#: ../plugin/ui.py:260
+msgid "SD"
+msgstr "SD"
+
+msgid "Save"
+msgstr "Зберегти"
+
+msgid "Save previous backup"
+msgstr ""
+
+msgid "Select"
+msgstr "Вибрати"
+
+msgid "Select files to backup"
+msgstr "Вибір файлів для резервн. копіювання."
+
+msgid "Select files/folders to backup"
+msgstr "Виберіть файли/папки для резервн. копіювання"
+
+#, fuzzy, python-format
+msgid ""
+"This will reinstall all plugins from your backup on %s.\n"
+"Do you really want to reinstall?"
+msgstr ""
+"Ви бажаєте відновити резервну копію з %s.\n"
+"Ви дійсно бажаєте, відновити ці настройки і перезавантажити?"
+
 #, python-format
 msgid ""
 "This will restore your backup on %s.\n"
@@ -135,29 +133,8 @@ msgstr ""
 "Ви бажаєте відновити резервну копію з %s.\n"
 "Ви дійсно бажаєте, відновити ці настройки і перезавантажити?"
 
-#: ../plugin/ui.py:298
-msgid "Failed"
-msgstr "Не вдалося"
+msgid "USB"
+msgstr ""
 
-#: ../plugin/ui.py:300
-msgid "Done"
-msgstr "Закінчено"
-
-#: ../plugin/ui.py:329
-msgid "Save"
-msgstr "Зберегти"
-
-#: ../plugin/ui.py:359
-msgid "Select files/folders to backup"
-msgstr "Виберіть файли/папки для резервн. копіювання"
-
-#: ../plugin/ui.py:365
-msgid "Deselect"
-msgstr "Скасувати"
-
-#: ../plugin/ui.py:367
-msgid "Select"
-msgstr "Вибрати"
-
-msgid "Save previous backup"
+msgid "root"
 msgstr ""
